GC now clears tree during traversal. Added some buttony buttons

--- a/Reversi/MainWindow.xaml
+++ b/Reversi/MainWindow.xaml
@@ -26,6 +26,11 @@
                 <ComboBox SelectionChanged="ChangedAIStrategy">
                     <ComboBoxItem Content="MostCapturedTiles" IsSelected="True"></ComboBoxItem>
                 </ComboBox>
+                <ComboBox SelectionChanged="ChangedUsedAlgorithm">
+                    <ComboBoxItem Content="MinMax" IsSelected="True"></ComboBoxItem>
+                    <ComboBoxItem Content="AlfaBeta"></ComboBoxItem>
+                </ComboBox>
+                
                 <Label Name="WinnerLabel"  Background="Green" Foreground="Black" FontSize="24"></Label>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -43,6 +48,9 @@
                     <Label Grid.Row="1" Grid.Column="0"  Name="BlackPointsLabel" HorizontalAlignment="Center" Visibility="Hidden">1</Label>
                     <Label Grid.Row="1"  Grid.Column="1"  Name="WhitePointsLabel" HorizontalAlignment="Center" Visibility="Hidden">2</Label>
                 </Grid>
+                <Button Height="40" Click="StartGameButtonClick">Start</Button>
+                <Button Height="40" Click="StopGameButtonClick">Stop</Button>
+                <Button Height="40" Click="ResetGameButtonClick">Reset game</Button>
             </StackPanel>
         </Border>
 
